# boundless-world-model

./: .gitignore  README.md  pyproject.toml
configs/: README.md  train_action_adaln.yaml  train_action_noise.yaml  train_noise_shortframe.yaml  train_template_full.yaml  wan2_1_fun_1_3b_inp.yaml  wan2_2_ti2v_5b.yaml
configs/infer/: infer.yaml
configs/train/: train_action_adaln.yaml  train_action_noise.yaml  train_noise_shortframe.yaml  train_template_base.yaml  train_template_full.yaml
docs/: pipeline_unit_design.md
scripts/: infer_example.sh  local.example.sh  train.sh  train_distributed.sh
src/wan_video_action/: __init__.py  parsers.py
src/wan_video_action/data/: operators.py
wan_video_action/: parsers.py
